Bug 151607 - fix an uninitialized variable in DocumentViewerImpl::PrintDocContent that was causing a later crash.  r=rods, sr=sspitzer.